Add library install; change "is" to ==

--- a/intro_to_power_supply.ipynb
+++ b/intro_to_power_supply.ipynb
@@ -10,13 +10,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.5"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "391dbeded46e3e505a72307c982b5080433a33cd711c1b09a010306e364e12d9"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Install libraries"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!pip install pandas whit-phys-util pyvisa notebook requests"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
   {
    "cell_type": "markdown",
    "source": [
