--- a/intro_to_multimeter.ipynb
+++ b/intro_to_multimeter.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from fluke8842a import Fluke8842A"
+    "from multimeter import BenchMultimeter"
    ],
    "outputs": [],
    "metadata": {}
