--- a/intro_to_power_supply.ipynb
+++ b/intro_to_power_supply.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "!pip install pandas whit-phys-util pyvisa notebook requests"
+    "!pip install pandas whit-phys-util pyvisa notebook requests 1>NUL"
    ],
    "outputs": [],
    "metadata": {}
@@ -65,7 +65,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from bk9172 import BK9172"
+    "from bkpowersupply import BKPowerSupply"
    ],
    "outputs": [],
    "metadata": {}
