--- a/resistor_sweep.ipynb
+++ b/resistor_sweep.ipynb
@@ -25,8 +25,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from fluke8842a import Fluke8842A\r\n",
-    "from bk9172 import BK9172"
+    "from multimeter import BenchMultimeter\r\n",
+    "from bkpowersupply import BKPowerSupply"
    ],
    "outputs": [],
    "metadata": {}
@@ -49,7 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "dmm = Fluke8842A(rm, 'address of the Fluke')"
+    "dmm = BenchMultimeter(rm, 'address of the multimeter')"
    ],
    "outputs": [],
    "metadata": {}
@@ -58,7 +58,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "ps = BK9172(rm, 'address of the BK Precision')"
+    "ps = BKPowerSupply(rm, 'address of the power supply')"
    ],
    "outputs": [],
    "metadata": {}
