--- a/intro_to_power_supply.ipynb
+++ b/intro_to_power_supply.ipynb
@@ -65,6 +65,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "from instrument_scanner import instrument_scan\r\n",
     "from bkpowersupply import BKPowerSupply"
    ],
    "outputs": [],
