--- a/intro_to_power_supply.ipynb
+++ b/intro_to_power_supply.ipynb
@@ -82,6 +82,15 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "instrument_scan()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "rm = pyvisa.ResourceManager()"
    ],
    "outputs": [],
