--- a/intro_to_multimeter.ipynb
+++ b/intro_to_multimeter.ipynb
@@ -25,7 +25,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from multimeter import BenchMultimeter"
+    "from multimeter import BenchMultimeter\r\n",
+    "from instrument_scanner import instrument_scan"
    ],
    "outputs": [],
    "metadata": {}
